[package]
name = "panic"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
parking_lot = { version = "0.11", optional = true }

slog = { version = "2.7", optional = true }
slog-scope = { version = "4.4", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["use-log"]
use-log = ["log"]
use-slog = ["slog", "slog-scope", "slog"]
use-parking-lot = ["parking_lot"]


[dev-dependencies]
env_logger = "0.8"
slog-term = "2.6"