[package]
name = "panik"
description = "Application-wide panic handling, whereby panics occurring in any thread are treated as a hard error and can be detected by other threads to trigger a graceful exit"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

repository = "https://github.com/DomWilliams0/panik-rs"
homepage = "https://github.com/DomWilliams0/panik-rs"
license = "MIT"
readme = "README.md"
keywords = ["panic", "application", "thread", "gamedev"]
categories = ["game-engines", "game-development", "concurrency"]

[dependencies]
backtrace = "0.3"
lazy_static = "1.4"
parking_lot = { version = "0.11", optional = true }

slog = { version = "2.7", optional = true }
slog-scope = { version = "4.4", optional = true }
log = { version = "0.4", optional = true }

[features]
default = ["use-log"]
use-log = ["log"]
use-slog = ["slog", "slog-scope", "slog"]
use-stderr = []
use-parking-lot = ["parking_lot"]


[dev-dependencies]
env_logger = "0.8"
slog-term = "2.6"